objects/Challenge__c.object
<CustomObject>
    <description>The main challenge or contest for the application.</description>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blog_URL__c</fullName>
        <inlineHelpText>The URL of the blog announcement.</inlineHelpText>
        <label>Blog URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code_Submissions__c</fullName>
        <description>The number of members that submitted code.</description>
        <inlineHelpText>The number of members that submitted code.</inlineHelpText>
        <label>Code Submissions</label>
        <summaryFilterItems>
            <field>Challenge_Participant__c.Submission_File__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Challenge_Participant__c.Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contest_Image__c</fullName>
        <label>Contest Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contest_Logo__c</fullName>
        <label>Contest Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Days_till_Close__c</fullName>
        <formula>IF(DATEVALUE(End_Date__c) - Today() &lt; 0, 
  0, 
  DATEVALUE(End_Date__c) - Today()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days till Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_Leaderboard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Does the results of the challenge appear on the leaderboard?</description>
        <label>Display on Leaderboard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date and time the challenge will stop appearing on the site.</description>
        <inlineHelpText>The date and time the challenge will stop appearing on the site.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group_Access__c</fullName>
        <label>Group Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Appirio</fullName>
                </value>
                <value>
                    <fullName>Dibon</fullName>
                </value>
                <value>
                    <fullName>Metacube</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Reviewers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_URL__c</fullName>
        <label>Install URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviewers__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Reviewers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prize_Type__c</fullName>
        <label>Prize Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Members__c</fullName>
        <description>The number of registered members for the challenge.</description>
        <label>Registered Members</label>
        <summaryForeignKey>Challenge_Participant__c.Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Release_to_Open_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release to Open Source?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirements</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <description>The ID of the challenge in SQL Server.</description>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Scorecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The type of scorecard to be used to judged each submission.</description>
        <inlineHelpText>The type of scorecard to be used to judged each submission.</inlineHelpText>
        <label>Scorecard</label>
        <referenceTo>QwikScore_Scorecard__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Code_URL__c</fullName>
        <label>Source Code URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appirio</fullName>
                    <default>true</default>
                    <label>Appirio</label>
                </value>
                <value>
                    <fullName>Twilio</fullName>
                </value>
                <value>
                    <fullName>salesforce.com</fullName>
                </value>
                <value>
                    <fullName>Tokbox</fullName>
                </value>
                <value>
                    <fullName>CloudSpokes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the challenge will begin appearing on the site.</description>
        <inlineHelpText>The date the challenge will begin appearing on the site.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#FFFF66</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                    <color>#666666</color>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                    <color>#FF0000</color>
                    <label>Review</label>
                </value>
                <value>
                    <fullName>Submission</fullName>
                    <color>#E27001</color>
                    <label>Submission</label>
                </value>
                <value>
                    <fullName>Winner Selected</fullName>
                    <color>#0B6FCE</color>
                    <label>Winner Selected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Badge__c</fullName>
        <description>The badge each user receives when attaining satisfactory submission score.</description>
        <label>Submission Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head in the Clouds</fullName>
                </value>
                <value>
                    <fullName>Joined the Party</fullName>
                </value>
                <value>
                    <fullName>Getting into the race!</fullName>
                </value>
                <value>
                    <fullName>AWESOME CERTIFIED</fullName>
                </value>
                <value>
                    <fullName>The Librarian</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker Traveler</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker Adventurer</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker Ninja</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry Apprentice</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry Journeyman</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry Blacksmith</fullName>
                </value>
                <value>
                    <fullName>Force.com Follower</fullName>
                </value>
                <value>
                    <fullName>The Shakespearean</fullName>
                </value>
                <value>
                    <fullName>The Data Modeler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Details__c</fullName>
        <label>Submission Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Teaser__c</fullName>
        <inlineHelpText>Short, teaser text used for the newsletter.</inlineHelpText>
        <label>Teaser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms of Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Terms &amp; Conditions</fullName>
                    <default>true</default>
                    <label>Standard Terms &amp; Conditions</label>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions 2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Prize_Money__c</fullName>
        <label>Total Prize Money</label>
        <summarizedField>Challenge_Prize__c.Value__c</summarizedField>
        <summaryForeignKey>Challenge_Prize__c.Challenge__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Usage_Details__c</fullName>
        <label>Usage Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Winner_Announced__c</fullName>
        <description>The date that the winner of the challenge will be announced.</description>
        <inlineHelpText>The date that the winner of the challenge will be announced.</inlineHelpText>
        <label>Winner Announced</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Winner_Badge__c</fullName>
        <description>The badge that the challenge winner receives.</description>
        <label>Winner Badge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head in the Clouds</fullName>
                </value>
                <value>
                    <fullName>Joined the Party</fullName>
                </value>
                <value>
                    <fullName>Getting into the race!</fullName>
                </value>
                <value>
                    <fullName>AWESOME CERTIFIED</fullName>
                </value>
                <value>
                    <fullName>The Librarian</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker Traveler</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker Adventurer</fullName>
                </value>
                <value>
                    <fullName>CloudSpoker Ninja</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry Apprentice</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry Journeyman</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundry Blacksmith</fullName>
                </value>
                <value>
                    <fullName>Force.com Follower</fullName>
                </value>
                <value>
                    <fullName>The Shakespearean</fullName>
                </value>
                <value>
                    <fullName>The Data Modeler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Challenge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sponsor__c</columns>
        <columns>Status__c</columns>
        <columns>Days_till_Close__c</columns>
        <columns>Registered_Members__c</columns>
        <columns>Code_Submissions__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Release_to_Open_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Winner_Selected</fullName>
        <columns>NAME</columns>
        <columns>Sponsor__c</columns>
        <columns>Registered_Members__c</columns>
        <columns>Code_Submissions__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Release_to_Open_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Winner Selected</value>
        </filters>
        <label>All Winner Selected</label>
    </listViews>
    <listViews>
        <fullName>Challenges_to_be_Scored</fullName>
        <columns>NAME</columns>
        <columns>Registered_Members__c</columns>
        <columns>Code_Submissions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Review</value>
        </filters>
        <label>Challenges to be Scored</label>
    </listViews>
    <listViews>
        <fullName>Open_Challenges</fullName>
        <columns>NAME</columns>
        <columns>Days_till_Close__c</columns>
        <columns>Registered_Members__c</columns>
        <columns>Code_Submissions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_till_Close__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Open Challenges</label>
    </listViews>
    <nameField>
        <label>Challenge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>